# rusty_gl

./: .gitignore  LICENSE.txt  README.md
.cargo/: config.toml
.github/workflows/: doc.yaml  rust_ci.yml
engine-src/: Cargo.toml
engine-src/src/: ctx_impl.rs  lib.rs
engine-src/src/engine/: helpers.rs  mod.rs  test.rs  window.rs
engine-src/src/engine/gl2d/: shapes.rs
engine-src/src/engine/gltext/: textures.rs
engine-src/src/engine/objects/: mod.rs  tengine_place_img.rs
engine-src/src/engine/shaders/fragment/: map_frag.glsl  texture_frag.glsl
engine-src/src/engine/shaders/vertex/: default_vert.glsl  map_vert.glsl
engine-src/src/engine/sound/: manager.rs
libs/: SDL2.lib  SDL2main.lib  SDL3_ttf.lib
scripts/: terra_build.sh  terra_test.sh
tests/: test.py  test_shapes.py
unused_required/: build.rs
